@@ -282,6 +282,22 @@ bool gfx_load_g2()
         // Read element data
         _g2.data = fs.ReadArray<uint8_t>(_g2.header.total_size);
 
+        if (_g2.header.num_entries != G2_SPRITE_COUNT)
+        {
+            std::string errorMessage = "Mismatched g2.dat size.\nExpected: " + std::to_string(G2_SPRITE_COUNT) + "\nActual: "
+                + std::to_string(_g2.header.num_entries) + "\ng2.dat may be installed improperly.\nPath to g2.dat: " + path;
+
+            log_error(errorMessage.c_str());
+
+            if (!gOpenRCT2Headless)
+            {
+                auto uiContext = GetContext()->GetUiContext();
+                uiContext->ShowMessageBox(errorMessage);
+                uiContext->ShowMessageBox("Warning: You may experience graphical glitches if you continue. It's recommended "
+                                          "that you update g2.dat if you're seeing this message");
+            }
+        }
+
         // Fix entry data offsets
         for (uint32_t i = 0; i < _g2.header.num_entries; i++)
         {
