@@ -1158,6 +1158,8 @@ enum
     SPR_CSG_BEGIN = SPR_G2_END,
     SPR_CSG_END = SPR_CSG_BEGIN + RCT1::Limits::Num_LL_CSG_Entries,
 
+    G2_SPRITE_COUNT = SPR_G2_END - SPR_G2_BEGIN,
+
     SPR_SCROLLING_TEXT_START = SPR_CSG_END,
     SPR_SCROLLING_TEXT_END = SPR_SCROLLING_TEXT_START + OpenRCT2::MaxScrollingTextEntries,
 
